# cortex.tensorrtllm

./: BUILD_ENGINE_MODEL.md  Dockerfile.nitro.windows  Dockerfile.tensorrt-llm-python.windows  requirements-windows.txt
.github/runners/: Dockerfile.window.runner  Dockerfile.window.runner-ada  Dockerfile.window.runner-all-arch  Dockerfile.window.runner-ampere  Dockerfile.windows.runner
.github/runners/linux/: Dockerfile.convertModel  Dockerfile.multi
.github/runners/windows/: Dockerfile  Dockerfile.window.runner
.github/scripts/: e2e-test-server-linux-and-mac.sh
.github/workflows/: build.yml  python-windows-build-release.yml  quality-gate.yml  windows-build-manual.yml  windows-build-release.yml  windows-build.yml
cpp/: CMakeLists.txt  Makefile  build_nitro.sh
cpp/include/tensorrt_llm/runtime/: samplingConfig.h
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/cortex.tensorrt-llm/: CMakeLists.txt  Makefile  install_deps.bat
cpp/tensorrt_llm/cortex.tensorrt-llm/base/cortex-common/: enginei.h
cpp/tensorrt_llm/cortex.tensorrt-llm/examples/server/: CMakeLists.txt  server.cc
cpp/tensorrt_llm/cortex.tensorrt-llm/scripts/: benchmark.py
cpp/tensorrt_llm/cortex.tensorrt-llm/src/: tensorrt-llm_engine.cc  tensorrt-llm_engine.h
cpp/tensorrt_llm/cortex.tensorrt-llm/src/cpp-tiktoken/: CMakeLists.txt  encoding.cc  pcre2_regex.cc
cpp/tensorrt_llm/cortex.tensorrt-llm/src/models/: load_model_request.h
cpp/tensorrt_llm/cortex.tensorrt-llm/src/utils/: tensorrt-llm_utils.h
cpp/tensorrt_llm/cortex.tensorrtllm/: CMakeLists.txt  Makefile
cpp/tensorrt_llm/cortex.tensorrtllm/base/cortex-common/: cortextensorrtllmi.h  enginei.h
cpp/tensorrt_llm/cortex.tensorrtllm/examples/server/: CMakeLists.txt  server.cc  server.h
cpp/tensorrt_llm/cortex.tensorrtllm/src/: tensorrtllm_engine.cc  tensorrtllm_engine.h
cpp/tensorrt_llm/cortex.tensorrtllm/src/models/: chat_completion_request.h  load_model_request.h
cpp/tensorrt_llm/cortex.tensorrtllm/src/utils/: tensorrtllm_utils.h
cpp/tensorrt_llm/layers/: banWordsLayer.cpp
cpp/tensorrt_llm/nitro/: CMakeLists.txt  Makefile  build_nitro.sh  install_deps.sh  main.cc  test.cc
cpp/tensorrt_llm/nitro/controllers/: tensorrtllm.cc  tensorrtllm.h
cpp/tensorrt_llm/nitro/examples/server/: CMakeLists.txt  server.h
cpp/tensorrt_llm/nitro/models/: chat_completion_request.h
cpp/tensorrt_llm/nitro/nitro_deps/: CMakeLists.txt
cpp/tensorrt_llm/nitro/src/: tensorrtllm_engine.cc  tensorrtllm_engine.h
cpp/tensorrt_llm/nitro/src/utils/: tensorrtllm_utils.h
cpp/tensorrt_llm/nitro/utils/: nitro_utils.h
cpp/tensorrt_llm/plugins/: CMakeLists.txt
cpp/tensorrt_llm/plugins/api/: tllmPlugin.cpp
examples/mamba/: requirements.txt
examples/qwen/: requirements.txt
examples/qwenvl/: requirements.txt
examples/whisper/: requirements.txt
scripts/: build_wheel.py
windows/: setup_env.ps1
